--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build":"tsc",
+    "prestart": "npm run build",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.9"
   }
 }
